# MetaTracker

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
metatracker/: __init__.py
metatracker/config/: __init__.py  config.py
metatracker/database/: __init__.py
metatracker/database/tables/: __init__.py  file_level_table.py  file_type_table.py  instrument_configuration_table.py  instrument_table.py  science_file_table.py  science_product_table.py  status_table.py
metatracker/tests/: conftest.py  test_cdftracker.py  test_database.py  test_tables.py  test_tracker.py  test_upsert.py
metatracker/tracker/: tracker.py
