[tool.poetry]
name = "metatracker"
version = "0.1.0"
description = "This is a python package that helps keep track of both Raw Binary and CDF Files in a Relational Database."
authors = [
    "Damian Barrous-Dume <fdamianbarrous@gmail.com>",
    "Andrew Robbertz <a.robbertz@gmail.com>"
]
repository = "https://github.com/swxsoc/MetaTracker"
readme = "README.md"
license = "Apache 2.0"
packages = [
  {include = "metatracker"}
]

[tool.poetry.dependencies]
python = ">=3.10"
sqlalchemy = ">=2.0.0,<3.0.0"
tenacity = "9.1.2"
swxsoc = { git = "https://github.com/swxsoc/swxsoc.git", branch = "main" }


[tool.poetry.group.dev.dependencies]
coverage = ">=5.5"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
deptry = "^0.20.0"
mypy = ">=0.981"
pre-commit = "^2.20.0"
tox = ">=3.25.1"
black = ">=24.10.0"
ruff = ">=0.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
preview = true

[tool.mypy]
files = ["metatracker"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.deptry.per_rule_ignores]
DEP004 = ["pytest"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["metatracker"]


